--- a/CSS/4.css其他选择器.md
+++ b/CSS/4.css其他选择器.md
@@ -27,12 +27,13 @@ css其他选择器
 
     E::before{content:" ";};
     E::after{content:" ";};   
-在E元素之前/后插入content后面的内容，与content属性联用。包括：
-`content:attr(title);` // 使用标签属性值
+在E元素之前/后插入区块，内容为content的值，与content属性联用。包括：
+`content:attr(title);` // 使用元素title属性值
 `content:"string";` // 填写字符串
 `content:"\21e0";` //获取字符集图标 斜杠就是转义 不过有一些图标在浏览器直接是有一些差别
 `content:url(123.gif);` //使用指定的绝对或相对地址插入一个外部资源（图像，声频，视频或浏览器支持的其他任何资源）
-可以混合使用，例如`content: " (" attr(href) ")";` //获取url并添加（）
+可以混合使用，例如`content: " (" attr(href) ")";` //获取元素href属性值并添加（）。
+伪元素的style是只读的，所以如果需要修改，可以使用`attr()`动态获取元素（自定义）属性，再修改该属性的值来间接修改。
 
     E::selection{}
 设置元素被选择时的颜色（默认选中时为蓝底白字）。
