--- a/ES6/3.解构赋值.md
+++ b/ES6/3.解构赋值.md
@@ -1,6 +1,6 @@
 解构赋值
 ===================
-就是直接提取出对象的值，然后赋值到变量。
+就是直接从对象中提取出值，然后赋值到变量。
 左右两边必须**结构一致**，即数组对数组，对象对对象。
 
 
@@ -54,7 +54,7 @@
 
     let { foo: foo, bar: bar } = { foo: 'aaa', bar: 'bbb' };
 
-也就是说，对象的解构赋值的内部机制，是先找到同名属性，然后再赋给同名属性的变量。真正被赋值的是后者，而不是前者。所以：
+也就是说，对象的解构赋值的内部机制，是先找到同名属性，然后再将属性值赋给变量。所以：
 
     let obj = {};
     let arr = [];
@@ -76,8 +76,10 @@
 
     let x = 1;
     let y = 2;
+    let z = 3;
     
-    let [x, y] = [y, x];
+    let [x, y, z] = [z, x, y];
+    console.log(x,y,z) //3,1,2
     
 **函数参数解构赋值**
 
@@ -86,6 +88,13 @@
     }
 
     add([1, 2]); // 3
+或者这样：
+
+    function add(x, y){
+      return x + y;
+    }
+
+    add(...[1, 2]); // 3
 
 **提取 JSON 数据**
 
