--- a/JS/15.DOM对象.md
+++ b/JS/15.DOM对象.md
@@ -114,16 +114,23 @@ getElementById()方法类似于CSS中的id选择器。
 
     node.attributes  //返回属性数组
     node.setAttribute("name","value");  //创建属性
-    node.removeAttribute("name");  //删 除属性
+    node.removeAttribute("name");  //删除属性
     node.getBoundingClientRect() //获取DOM基本位置大小属性
 
 **样式**
 
+**style**
 在 style 特性中指定的任何 CSS 属性都将表现为这个style 对象的相应属性。对于使用短划线分隔（例如 background-image）的 CSS 属性名，必须将其转换成驼峰大小写形式。
 
     myDiv.style.backgroundColor   //返回属性值
     myDiv.style.backgroundColor = "red";  //设置属性值
 对于width和height只能取得内联样式的值，但可以进行设置。
+
+**getComputedStyle(element[,伪元素])**
+getComputedStyle 和 element.style 一样返回的都是 CSSStyleDeclaration 对象，但是getComputedStyle获取的是只读的，可以比style多获取到元素的伪元素属性。
+```
+let content = getComputedStyle(myDiv, '::after').content
+```
 
 **类名**
 
