--- a/JS/8.函数理解.md
+++ b/JS/8.函数理解.md
@@ -35,6 +35,9 @@
 return 语句会：1.终止函数的执行 2.返回函数的值
  表单提交的时候 如果函数返回 false  表单就不提交了。
 
+**解析**
+函数在定义后，在调用执行前先会进行解析，解析时，函数会储存自身所在的上下文环境。
+
 ###函数参数
 
 **arguments对象**
