--- a/Vue/6.绑定指令v-bind（二）.md
+++ b/Vue/6.绑定指令v-bind（二）.md
@@ -29,3 +29,15 @@
         id1: 'myid'
       }
     })
+
+###动态参数
+也可以在指令参数中使用动态参数，方法是用方括号括起来：
+```
+<a v-bind:[attributeName]="url"> ... </a>
+```
+attributeName的值来源于组件实例的 data property。
+
+同样可以使用动态参数为一个动态的事件名绑定处理函数：
+```
+<a v-on:[eventName]="doSomething"> ... </a>
+```
