--- a/ES6/6.数组.md
+++ b/ES6/6.数组.md
@@ -136,3 +136,8 @@ Array.of(undefined) // [undefined]
 Array.of(3) // [3]
 Array.of(3, 11, 8) // [3,11,8]
 ```
+这个方法的主要目的，是弥补数组构造函数Array()的不足，基本上可以用来替代Array()或new Array()。
+```
+Array(3) // [, , ,]
+Array(3, 11, 8) // [3, 11, 8]
+```
