--- a/Vue/2.Vue起步.md
+++ b/Vue/2.Vue起步.md
@@ -23,6 +23,17 @@ Vue起步
 	</div>
 这个被vue实例控制的DOM区域就是mvvm中的v（view）。
 
+**vue3**
+vue3使用新的全局api`createApp`
+```
+const app = Vue.createApp({})
+```
+和新的应用api`mount`
+```
+app.mount('#id')
+```
+来挂载到DOM。
+
 ###数据响应
 
 当一个 Vue 实例被创建时，data属性的值发生改变时，视图将会产生“响应”，即对应更新为新的值：
