--- a/Vue/12.组件（二）.md
+++ b/Vue/12.组件（二）.md
@@ -177,7 +177,7 @@ provide() {
 inject: ['fatherdata']
 ```
 provide/inject 绑定并不是响应式的。provide的变化并不会反映在 inject。
-注意：provide传递的数据如果是引用类型，改变这个数据，虽然看到变化，但这不是由于响应式而产生的变化。
+注意：provide传递的数据如果是引用类型，改变这个数据，虽然inject值变化，但这是由于数据为引用类型导致的，不是由于响应式而产生的变化。
 
 **响应式**
 需要为 provide 的数据使用一个组合式 API`computed`，inject接收到的是一个对象，数据值储存在value内。
