--- a/Vue/8.列表渲染.md
+++ b/Vue/8.列表渲染.md
@@ -66,8 +66,15 @@ this.arr[0] = 1
     ]
 表示每一项根据id进行绑定
 
-
-
+###v-for和v-if一起使用
+2.x 版本中在一个元素上同时使用 v-if 和 v-for 时，v-for 会优先作用，3.x 版本中 v-if 总是优先于 v-for 生效。所以，最好避免在同一元素上同时使用两者。
+```
+<template v-for="todo in todos" :key="todo.name">
+  <li v-if="todo.isComplete">
+    {{ todo.name }}
+  </li>
+</template>
+```
 
 
 
