--- a/JS/14.数组对象.md
+++ b/JS/14.数组对象.md
@@ -166,7 +166,8 @@
 
     values.reduce(function(acc, cur, index, array){ 
        return acc + cur; 
-    });   //10
+    },init);
+如果没有提供init初始值，则将使用数组中的第一个元素作为init。
 以上方法都不会修改原数组中的包含的值。
 
 ###数组的比较
