--- a/JS/18.JS事件.md
+++ b/JS/18.JS事件.md
@@ -8,7 +8,7 @@ JS事件
 
 
 ###事件调用
-响应某个事件的函数就叫做事件处理程序，事件处理程序的名字以"on"开头。
+响应某个事件的函数就叫做事件处理程序。
 
 1.在script标签中调用；
 首先使用document.getElementById(" ")来获取一个元素节点，再赋值给一个变量，之后添加该变量事件就可。
@@ -46,8 +46,8 @@ JS事件
             event.stopPropagation();    //阻止事件冒泡
         },false);
 
-一个事件可以添加多个事件处理程序，按照添加它们的顺序依次触发。
-**通过addEventListener()添加的事件处理程序只能使用removeEventListener()来移除**。移除时传入的参数与添加处理程序时使用的参数相同，这也意味着通过addEventListener()添加的匿名函数将无法移除（两个一样的匿名函数不是相同的函数），因此需要函数写为非匿名函数，并写在事件外:
+'on事件'绑定的事件，后绑定的会覆盖先绑定的事件处理，而addEventListener绑定的事件不会覆盖。
+**'on事件'绑定的事件通过 `dom.on事件 = null`来移除**，**addEventListener()添加的事件处理程序只能使用removeEventListener()来移除**。移除时传入的参数与添加处理程序时使用的参数相同，这也意味着通过addEventListener()添加的匿名函数将无法移除（两个一样的匿名函数不是相同的函数），因此需要函数写为非匿名函数，并写在事件外:
 
     var btn = document.getElementById("myBtn");
     var handler = function(){
