--- a/Vue/1.理解Vue.md
+++ b/Vue/1.理解Vue.md
@@ -6,7 +6,7 @@ Vue、Angular和React都是前端框架，它们的特点在于
 2、基于**模块化组件化**的开发模式
 
 ###单页面应用
-只有单Web页面的应用，这个页面由一个初始页面和多个页面模块组成，单页面跳转仅加载本页面资源 ，公共资源(js、css等)仅需加载一次。
+一个Web页面构成的应用，或者说一个应用，由一个页面构成。
 
 组件化：页面的每个部件，比如头部，内容区，弹出框甚至确认按钮都可以成为一个组件，每个组件有独立的HTML、css、js代码。组件可以直接放在页面内，也可以和其他组件一起形成新的组件，这样，一个页面将会是组件的结合。
 
@@ -14,13 +14,13 @@ Vue、Angular和React都是前端框架，它们的特点在于
 
 ###数据驱动
 
-Vue虽然和jQuery一样是前端框架，但它的中心思想就是**数据驱动**，而jQuery是**结构驱动**。使用jQuery是要先用选择器获取DOM结构后，再修改数据更新页面。而Vue直接将数据匹配到视图层后，再修改数据更新页面。
+Vue虽然和jQuery一样是前端框架，但它的中心思想就是**数据驱动**，而jQuery是**结构驱动**。使用jQuery是要先用选择器获取DOM结构后，再修改数据更新页面。而Vue直接将数据层和视图层先绑定，之后只需要关注数据即可。
 
 ###安装
 
 1.直接引入
 
-下载vue.js，使用 `<script>` 标签引入。
+使用 `<script>` 标签引入vue.js。
 
 2.或使用CDN引入
  
@@ -30,4 +30,4 @@ Vue虽然和jQuery一样是前端框架，但它的中心思想就是**数据驱
 ```
 $ npm install vue
 ```
-4.或使用命令行@vue/cli工具
+4.或使用@vue/cli脚手架工具，脚手架工具是官方对于使用npm安装的封装
