--- a/Vue/10.表单绑定.md
+++ b/Vue/10.表单绑定.md
@@ -17,34 +17,48 @@
     }
 
 ###选择框
-`v-model`将 `value` 的值绑定至data内。
 
 **单选框**
+`v-model`将 `value` 的值绑定至data内:
 ```
 <label :for="num" v-for="num in arrNum" :key="num">
-  <input type="radio" :id="num" :value="num" v-model="isPick">{{num}}
+  <input type="radio" :id="num" :value="num" v-model="pickNum">{{num}}
 </label>
 
 data(){ 
   return {
     arrNum: [1, 2, 3, 4],
-    isPick: '',
+    pickNum: '',
   }
 }
 
 ```
 **复选框**
+`v-model`将布尔值绑定至data内:
+```
+<label for="checkbox">
+  <input type="checkbox" id="checkbox" v-model="checked">{{ checked }}
+</label>
+
+data(){ 
+  return {
+    checked: false,
+  }
+}
+```
+
+`v-model`将 `value` 的值绑定至data内:
 ```
 <div class="app" v-cloak>
   <label :for="num" v-for="num in arrNum" :key="num">
-    <input type="checkbox" :id="num" :value="num" v-model="isPick">{{num}}
+    <input type="checkbox" :id="num" :value="num" v-model="pickNum">{{num}}
   </label>
 </div>
 
 data(){ 
   return {
     arrNum: [1, 2, 3, 4],
-    isPick: [],
+    pickNum: [],
   }
 }
 ```
