--- a/Vue/2.Vue起步.md
+++ b/Vue/2.Vue起步.md
@@ -13,15 +13,16 @@ Vue起步
             fn: function() {}
         }
     })
-为这个Vue构造函数传入的配置对象中：
-`data`就是数据，`methods`就是函数。这些数据内容就是mvvm中的m。改变vue实例的data对象数据，新数据会自动同步至DOM内。
-`el`是element，对应 DOM 的 id，这样就可以将DOM元素及其后代元素和Vue实例绑定在一起：
+Vue构造函数接受一个**配置对象**作为参数，其中：
+`data`就是数据，`methods`就是函数。
+`el`是选择器，选择vue实例要绑定的dom元素：
 
 	<div id="id">
 	    <p>{{data1}}</p>
 	    <p>{{data2}}</p>
 	</div>
-这个被vue实例控制的DOM区域就是mvvm中的v（view）。
+这个被vue实例绑定的DOM区域就是mvvm中的v（view），这个通过 new 创建的vue实例称为根实例。
+
 
 **vue3**
 vue3使用新的全局api`createApp`
@@ -36,7 +37,7 @@ app.mount('#id')
 
 ###数据响应
 
-当一个 Vue 实例被创建时，data属性的值发生改变时，视图将会产生“响应”，即对应更新为新的值：
+当一个 Vue 实例内，data属性的值发生改变时，视图将会产生“响应”，即更新为新的值：
 
     // 自定义的数据对象
     var data1 = { a: 1 }
@@ -45,35 +46,17 @@ app.mount('#id')
     var vm = new Vue({
         data: data1
     })
-数据改变时，html视图会进行重渲染。
-
-    data1.a=2
-    //vm.a == data1.a
-除非使用Object.freeze()冻结了data对象，则对data对象属性的改动会被阻止，也就无法相应到DOM。
-```
-Object.freeze(data1)
-```
-需要注意：当实例被创建时， data 中存在的属性才是响应式的，新添加的属性不会触发任何视图的更新。比如：
+data1的a值改变时，html视图会进行重渲染。这是由于 data1 对象在向vue传递时，所有的属性都会被vue监视。属性值发生改变后，才能反应到dom中。
+注意：添加到vue实例后，再新添加的属性不会响应式，因为新属性没有被vue进行监视。比如：
 
     vm.b = 2
-那么对 b 的改动将不会触发任何视图的更新。
-这种数据绑定是由vue实例指向视图层，是**单向绑定**。
+对 b 的改动将不会触发任何视图的更新。
+所以，如果需要添加一个新属性并能响应，最好是提前添加这个属性，并给一个默认值。或者，通过`$set`来添加新属性。
+这种数据绑定是由vue实例指向视图层，是**单向绑定**，只能由vue实例来更新视图。
 
-###实例自身属性和方法
-vue实例自身也包含属性和方法，在访问时，为了和自定义的属性方法区分开，需要在vue实例的属性方法前添加`$`符号：
-```
-vm.$data === data1;
-vm.$el === document.getElementById('id');
-// $watch 是一个实例方法,用来监视属性值的变化，并返回变化前后的值
-vm.$watch('a', function (newValue, oldValue) {
-  // 这个回调将在 `vm.a` 改变后调用
-})
-```
-
-
-###Vue实例生命周期
-Vue新页面从被创建到被销毁，这一完整的过程称为生命周期。在这个过程中会运行一些叫做生命周期钩子的函数被依次触发，生命周期函数可以用来控制页面处于不同阶段时要做的事。
-生命周期函数卸载vue实例内，不能使用箭头函数：
+###生命周期
+Vue实例从被创建到被销毁，这一完整的过程称为生命周期。在这个过程中会，一些叫做生命周期钩子的回调函数被依次触发，生命周期函数可以用来控制不同阶段时要做的事。
+生命周期函数不能使用箭头函数：
 ```
 var vm = new Vue({
 	el : "#app",
@@ -81,12 +64,12 @@ var vm = new Vue({
 		msg : "hi vue",
 	},
     
-	//页面创建之前
+	//实例创建之前
 	beforeCreate:function(){
 		console.log('beforeCreate');
 	},
     
-	//页面创建之后。在这一步，实例已完成以下的配置：数据观测 (data observer)，属性和方法的运算，watch/event 事件回调。然而，挂载阶段还没开始，$el 属性目前不可见。
+	//实例创建之后。在这一步，实例已完成以下的配置：数据观测 (data observer)，属性和方法的运算，watch/event 事件回调。然而，还没开始将实例挂载到dom，$el 属性目前不可见。
 	created	:function(){
 		console.log('created');
 	},
@@ -97,7 +80,7 @@ var vm = new Vue({
 
 	},
     
-	//el 被新创建的 vm.$el 替换, 挂载成功	
+	//挂载完成，vue实例替换了绑定的dom内的元素
 	mounted : function(){
 		console.log('mounted');
 	
