--- a/Vue/4.监听属性和计算属性.md
+++ b/Vue/4.监听属性和计算属性.md
@@ -81,7 +81,16 @@ data() {
       }
     }
 区别在于：
-计算属性使用的 `this.message` 不改变，再次调用不会重新执行函数，而是直接返回缓存结果。
+计算属性只基于**响应式依赖**， `this.message` 不改变，则不会再次执行函数，而是直接返回缓存结果。
+```
+computed: {
+  now: function () {
+    return Date.now()
+  }
+}
+```
+计算属性now也不再更新,因为Date.now()这个依赖不是响应式的。
+
 方法在调用时，总会重新调用执行函数。
 
     <div id="app">
