--- a/Vue/6.绑定指令v-bind（二）.md
+++ b/Vue/6.绑定指令v-bind（二）.md
@@ -2,7 +2,7 @@
 ===================
 
 ###绑定样式style
-可以在 `v-bind:style` 直接设置内联样式，看着非常像 CSS，但其实是一个 JavaScript 对象。CSS 属性名用**驼峰式**。
+可以在 `v-bind:style` 直接设置内联样式。CSS 属性名用**驼峰式**。
 **对象语法**
 
     <div v-bind:style="styleObject"></div>
@@ -31,7 +31,7 @@
     })
 
 ###动态参数
-也可以在指令参数中使用动态参数，方法是用方括号括起来：
+2.6.0版本后，也可以在指令参数中使用动态参数，方法是用方括号括起来：
 ```
 <a v-bind:[attributeName]="url"> ... </a>
 ```
