--- a/Vue/8.列表渲染.md
+++ b/Vue/8.列表渲染.md
@@ -18,19 +18,25 @@
             ]
         }
     })
-v-for 还支持当前项的索引做为可选参数（前面的是项，后面的是索引）
+v-for 还支持当前项的索引做为可选参数：
 
     <ul id="example">
         <li v-for="(item, index) in items">{{ index }} - {{ item.message }}</li>
     </ul>
 
-**数组的非响应式**
-数组通过函数方法改变，会响应式的引起页面的刷新，但是通过数组index改变数组,只会改变数组，而不会响应式的更新：
+**数组的非响应式方法**
+数组通过数组方法改变自身，会响应式的引起页面的刷新，但是通过数组index改变数组,只会改变数组，而不会响应式的更新页面：
 
 ```
 this.arr[0] = 1 
 ```
-这种更改方式，就不会响应式更新。
+因为这种更改方式，不是响应式的方法。
+响应式方法包括：
+push()、pop()、shift()、unshift()、splice()、sort()、reverse()、filter()、concat() 和 slice()
+非响应式方法包括：
+1.利用索引直接设置一个数组项
+2.修改数组的长度
+这两个非响应式方法，都可以通过splice()实现响应式。
 
 ###对象形式
 可以通过一个对象的属性来迭代数据：
@@ -67,10 +73,10 @@ this.arr[0] = 1
 表示每一项根据id进行绑定
 
 ###v-for和v-if一起使用
-2.x 版本中在一个元素上同时使用 v-if 和 v-for 时，v-for 会优先作用，3.x 版本中 v-if 总是优先于 v-for 生效。所以，最好避免在同一元素上同时使用两者。
+2.x 版本中在一个元素上同时使用 v-if 和 v-for 时，v-for 会优先作用，3.x 版本中 v-if 会优先作用。所以，最好避免在同一元素上同时使用两者。
 ```
 <template v-for="todo in todos" :key="todo.name">
-  <li v-if="todo.isComplete">
+  <li v-if="todo.isShow">
     {{ todo.name }}
   </li>
 </template>
