--- a/CSS/9.盒模型.md
+++ b/CSS/9.盒模型.md
@@ -147,6 +147,21 @@ stretch（默认值）：如果项目未设置高度或设为auto，将占满整
         bottom: 0;
     }
 
+3.平移法
+
+    .box{
+        width: 300px;
+        height: 300px;
+        position: relative;
+        border: 1px solid #465468;
+    }
+    .content{
+        position: absolute;
+        top: 50%;
+	    left: 50%;
+	    transform: translate(-50%, -50%);
+    }
+
 ###容器内项目的属性
 
 **order属性**
