--- a/ES6/5.函数.md
+++ b/ES6/5.函数.md
@@ -89,5 +89,5 @@ foo()
     let getTempItem = id => ({ id: id, name: "Temp" });
     
 注意：
-**箭头函数没有自身的this对象**，箭头函数内部的this就是外层代码块的this，指向创建箭头函数的上下文对象，而不是函数自身。这个指向是固定不变的。这适合用于对象方法中使用this，必须非常小心。箭头函数”绑定”this，很大程度上解决了这个困扰。
+**箭头函数没有自身的this对象**，箭头函数内部的this就是外层代码块的this，指向创建箭头函数的上下文对象，而不是函数自身。这个指向是固定不变的。
 **箭头函数没有arguments对象**，如果要用，用 rest 参数代替。
