--- a/HTML/8.插入超链接.md
+++ b/HTML/8.插入超链接.md
@@ -42,34 +42,23 @@
 
 设置链接的href对应锚点id属性值，可以在打开的页面内添加锚点链接，当点击超链接时，可以转到页面内链接的地点去。
      
-    <!DOCTYPE html>
-    <html lang="zh-cn">
-    <head>
-	<meta charset="UTF-8">
-	<title>超链接</title>
-    </head>
-    <body>
-	<p>
-		<a href="#1">锚点1</a>
-		<a href="#2">锚点2</a>
-		<a href="#3">锚点3</a>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		<a id="1">对应锚点1</a>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		<a id="2">对应锚点2</a>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		<a id="2">对应锚点3</a>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	</p>
-    </body>
-    </html>
-在点击锚点的链接后，就可以跳到对应的锚点位置。在"相关文件"这个文件夹内有html文件，可以进行尝试查看。
+    <a href="#1">锚点1</a>
+    <a href="#2">锚点2</a>
+    <a href="#3">锚点3</a>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <a id="1">对应锚点1</a>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <a id="2">对应锚点2</a>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <a id="2">对应锚点3</a>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+在点击锚点的链接后，就可以跳到对应的锚点位置。在"相关文件"这个文件夹内有html文件，可以查看。
 
 **href="#"的作用**
 a中href="#"表示链接到当前页面处，这里就回到最顶部。
 
     <a href="#">回到页面最顶端</a>
-
 
 
 ##target属性
