--- a/Vue/14.特殊属性.md
+++ b/Vue/14.特殊属性.md
@@ -1,15 +1,23 @@
-特殊指令
+特殊属性
 ===================
-###特殊指令
+###特殊属性
 **key**
-结合 v-for 使用。
+Vue 会尽可能的复用相同的元素，所以组件中的相同的子元素最好有独特的 key。
+最常见的用例是结合 v-for、v-if。
 
 **is**
-结合默认组件component来动态渲染:
+结合内置组件component来动态渲染:
 ```
 <component :is="componentName"></component>
 ```
 传入哪个组件名，就动态的渲染出该组件。
+
+组件切换时，每次都会重置为初始状态，如果需要保持组件内的状态，需要使用内置组件keep-alive：
+```
+<keep-alive>
+  <component :is="componentName"></component>
+</keep-alive>
+```
 
 **ref**
 ref 用来标记元素或子组件。被标记的内容可以会储存在该组件`this.$refs`对象内。
