--- a/Vue/9.事件绑定.md
+++ b/Vue/9.事件绑定.md
@@ -81,7 +81,7 @@
 使用修饰符时，顺序很重要；相应的代码会以同样的顺序产生。因此，用 `v-on:click.prevent.self` 会阻止所有的点击，而 `v-on:click.self.prevent` 只会阻止对元素自身的点击。
 
 ###按键修饰符
-在监听键盘事件时，Vue 允许为 v-on 在监听键盘事件时添加按键修饰符：
+在监听键盘事件时，Vue 允许为 v-on 在监听键盘事件时添加按键修饰符（key值）：
 
     <!-- 只有在 `key` 是 `Enter` 时调用 `vm.submit()` -->
     <input v-on:keyup.enter="submit">
