--- a/CSS/11.背景样式.md
+++ b/CSS/11.背景样式.md
@@ -36,8 +36,10 @@
 
 **4.background-size**
 设置背景图片的大小
-  
-    background-size:X像素值 Y像素值;
+`length`：背景图片高度和宽度，可产生形变，第二个值默认auto。
+`percentage`: 相对于背景定位区域的百分比，可产生形变，第二个值默认auto。
+`cover`：保持图像的纵横比，并将图像缩放至完全覆盖背景区域，不产生形变。
+`contain`：保持图像的纵横比，并将图像缩放至宽或高其中一个满足背景区域，不产生形变。
 
 **5.background-attachment**
 设置背景图像是否随内容而滚动
