--- a/Vue/17.代码风格.md
+++ b/Vue/17.代码风格.md
@@ -2,28 +2,17 @@
 ===================
 
 **1.组件名为多个单词**
-可以避免跟现有的以及未来的 HTML 元素相冲突，因为所有的 HTML 元素名称都是单个单词的。
-
+组件名推荐由多个单词和横杠组成。这样可以避免跟现有以及未来的 HTML 元素相冲突。
 
 **2.Prop 定义尽量详细**
 prop 的定义应该尽量详细，至少需要指定其类型。
 ```
 props: {
-  status: {
-    type: String,
-    required: true,
-    validator: function (value) {
-      return [
-        'syncing',
-        'synced',
-        'version-conflict',
-        'error'
-      ].indexOf(value) !== -1
-    }
-  }
+  status: String
 }
 ```
-**3.避免 v-if 和 v-for 用在一起**
+
+**3.避免 v-if 和 v-for 同时使用**
 在两种常见的情况下会倾向于这样做：
 
 * 为了过滤一个列表中的项目 (比如 v-for="user in users" v-if="user.isActive")。在这种情形下，请将 users 替换为一个计算属性 (比如 activeUsers)，让其返回过滤后的列表。
@@ -51,11 +40,9 @@ computed: {
   </li>
 </ul>
 ```
-**4.组件样式设置作用域**
-这条规则只和单文件组件有关。
-使用 scoped 特性，也可以使用 CSS Modules，或者类名添加组件专属的前缀 。
 
-* 使用 `scoped` 特性
+**4.组件样式设置作用域**
+单文件组件内，样式表添加 scoped 特性。
 ```
 <template>
   <button class="button">X</button>
@@ -67,30 +54,3 @@ computed: {
 }
 </style>
 ```
-
-* 使用 CSS Modules
-```
-<template>
-  <button :class="[$style.button]">X</button>
-</template>
-
-<style module>
-.button {
-  border-radius: 2px;
-}
-</style>
-```
-
-* 添加组件专属的前缀
-```
-<template>
-  <button class="c-Button">X</button>
-</template>
-
-<style>
-.c-Button {
-  border-radius: 2px;
-}
-</style>
-```
-**5.为插件、混入的私有属性添加前缀**
