--- a/Ajax/5.同源和跨域.md
+++ b/Ajax/5.同源和跨域.md
@@ -5,11 +5,12 @@
 每个连接到Internet上的主机都会分配一个IP地址，IP地址是用来唯一标识互联网上计算机的逻辑地址，机器之间的访问就是通过IP地址来进行的。IP地址经常被写成十进制的形式，用“.”分开，如：127.0.0.1。
 
 **域名**
-在IP地址的基础上又发展出一种符号化的地址方案，来代替数字型的IP地址。每一个符号化的地址都与特定的IP地址对应。这个与网络上的数字型IP地址相对应的字符型地址，就被称为域名。域名是www.***.***(如.com .top等)
+在IP地址的基础上又发展出一种符号化的地址方案，来代替数字型的IP地址。每一个符号化的地址都与特定的IP地址对应。这个与网络上的数字型IP地址相对应的字符型地址，就被称为域名。域名是www.***.***(如`.com .top`等)
 
 IP和域名之间的转换工作称为域名解析，域名解析需要由专门的域名解析服务器来完成，DNS就是进行域名解析的服务器。域名的最终指向是IP。
 
-`输入域名----域名解析服务器（dns）解析成ip地址---访问IP地址---完成访问的内容---返回信息`
+**整体流程**：
+`输入域名----域名解析服务器（dns）解析成ip地址---建立TCP连接---发送HTTP请求---完成请求并返回信息---浏览器解析渲染`
 
 通常情况下一个域名同一时刻只能对应一个IP地址。但是在域名服务商那里，可以把服务器群里面的多个提供相同服务的服务器IP设置一个域名可以轮询。但是同一时刻，一个域名只能解析出一个IP供你使用。这些IP可以轮流着被解析。一个IP可以绑定无数个域名，这个没有限制。
 
