--- a/ES6/13.promise.md
+++ b/ES6/13.promise.md
@@ -109,3 +109,16 @@ getJSON("/example.json").then(function(json) {
   console.error('出错了', error);
 });
 ```
+
+###链式调用
+连续执行两个或者多个异步操作，则可以使用then执行链式调用。
+```
+doSomething().then(function(result) {
+  return doSomethingElse(result);
+})
+.then(function(newResult) {
+  return doThirdThing(newResult);
+})
+.catch(failureCallback);
+```
+注意：一定要有返回值，否则，callback 将无法获取上一个 Promise 的结果。
