--- a/ES6/15.class.md
+++ b/ES6/15.class.md
@@ -27,7 +27,14 @@ class Point {
 ```
 `constructor`方法就是构造函数，this关键字指向实例对象，类的所有方法都定义在类的`prototype`属性上面（包括constructor()）。
 **constructor 方法**
-constructor方法是类的默认方法，通过new命令生成对象实例时，自动调用该方法。一个类必须有constructor方法，如果没有显式定义，会默认添加一个空的constructor方法。
+constructor方法是类的默认方法，通过new命令生成对象实例时，自动调用该方法。
+一个类必须有constructor方法，如果没有显式定义，会默认添加一个空的constructor方法。
+
+**static关键字**
+有static关键字的方法是静态方法，只有类才能调用。实例只能调用非静态方法，类也只能调用静态方法。
+如果静态方法包含this关键字，这个this指的是类，而不是实例。
+父类的静态方法，也会被子类继承。
+
 **类的实例**
 生成类的实例，也是直接对类使用new命令，跟构造函数的用法完全一致。
 ```
@@ -36,8 +43,11 @@ class Point {
 }
 var point = new Point();
 ```
+
+**原型**
 可以通过实例的__proto__属性获取原型，ES6更推荐使用 Object.getPrototypeOf(point) 方法来获取实例的原型。获取到的原型就是Point.prototype。
-可以为原型添加方法/属性。
+
+Object.assign()方法可以一次为原型添加多个方法。
 ```
 class Point {
 	constructor(){
@@ -50,7 +60,7 @@ Object.assign(Point.prototype, {
 	toValue(){}
 });
 ```
-注意：类的所有实例都是同一个原型对象，都是Point.prototype。**改写原型，会改变“类”的原始定义，影响到所有实例**。
+注意：类的所有实例都是同一个原型对象，都是Point.prototype，在类的实例上面调用方法，其实就是调用原型上的方法。**改写原型，会影响到所有实例**。
 ```
 point1.__proto__ === point2.__proto__
 ```
@@ -136,7 +146,7 @@ class B extends A{
 let b = new B();
 b.log() //B {}
 ```
-需要注意，可以通过super对某个属性赋值，这时super就是this。但**无法通过super对象获取父类和子类的属性值**。
+需要注意，可以通过super对某个属性赋值，这时super就是this。但**super对象只能set，不能get**。
 
 ```
 class A {
@@ -170,4 +180,4 @@ var b=new B()
 在生成实例时，类的属性会初始化，所以需要自执行的内容需要放在constructor方法内。
 
 **Object.getPrototypeOf()**
-Object.getPrototypeOf方法可以用来从子类上获取父类。可以使用这个方法判断，一个类是否继承了另一个类。
+Object.getPrototypeOf方法可以获取子类的父类。可以使用这个方法判断，一个类是否继承了另一个类。
