--- a/JS/8.函数理解.md
+++ b/JS/8.函数理解.md
@@ -259,8 +259,7 @@ bar的作用域绑定foo内，bar所访问的变量x指向的是foo内部的x，
 
 ###闭包
 
-函数能够访问作用域内的变量，它和这些变量（上下文环境）组合形成了闭包。也就是说，函数在每次创建时生成闭包，“记住”了函数诞生的环境，函数能访问到这个环境内的变量。
-如果需要得到函数内的局部变量，正常情况下，这是办不到的。但是，由于函数能“记住”诞生的环境。如果在函数的内部，再定义一个内部函数，而这个内部函数访问了局部变量，则每次调用内部函数，就可以访问到局部变量，这个局部变量会一直存在于内存中。
+在每次创建时，函数“记住”了诞生的环境（作用域），函数能访问到这个环境内的变量。JavaScript 允许函数嵌套，并且内部函数可以访问定义在外部函数中的所有变量和函数，以及外部函数能访问的所有变量和函数。当内部函数在外部函数作用域被访问时，一个闭包就产生了。
 
     function fn1(){
     	var a=1;
@@ -278,6 +277,8 @@ bar的作用域绑定foo内，bar所访问的变量x指向的是foo内部的x，
     var f=fn1();
     f();  //2
     f();  //3
+
+外部函数的a变量对内嵌函数来说是可取得的，而除了通过内嵌函数本身，没有其它任何方法可以取得内嵌的变量。
 
 **闭包的this**
 
