--- a/Vue/24.响应式原理.md
+++ b/Vue/24.响应式原理.md
@@ -21,3 +21,4 @@ Vue.delete(object, propertyName)
 
 ###vue3
 vue3使用Proxy来代理传入data的对象，实现响应式。
+Object.defineProperty只能遍历对象属性进行劫持，Proxy直接可以劫持整个对象，并返回一个新对象，只操作新的对象来达到响应式。
