--- a/Vue/2.Vue起步.md
+++ b/Vue/2.Vue起步.md
@@ -99,4 +99,40 @@ var vm = new Vue({
 	}
 });
 ```
+
 ![](./相关文件/2.1.png)
+
+**nextTick**
+当处理data内数据时，是先执行，再重新渲染DOM，而nextTick能将执行延迟到本轮 DOM 更新之后，即先执行其他的，渲染DOM后，再执行nextTick的回调，再渲染。
+```
+<div class="app">
+  <div ref="msgDiv">{{msg}}</div>
+  <div v-if="msg1">{{msg1}}</div>
+  <div v-if="msg2">{{msg2}}</div>
+  <div v-if="msg3">{{msg3}}</div>
+  <button @click="changeMsg">
+    Change the Message
+  </button>
+</div>
+new Vue({
+  el: '.app',
+  data: {
+    msg: 'oldData.',
+    msg1: '',
+    msg2: '',
+    msg3: ''
+  },
+  methods: {
+    changeMsg() {
+      this.msg = "newData."
+      // DOM未更新
+      this.msg1 = this.$refs.msgDiv.innerHTML
+      this.$nextTick(() => {
+    	// DOM以更新
+        this.msg2 = this.$refs.msgDiv.innerHTML
+      })
+      this.msg3 = this.$refs.msgDiv.innerHTML
+    }
+  }
+})
+```
