--- a/Vue/24.响应式原理.md
+++ b/Vue/24.响应式原理.md
@@ -1,24 +1,22 @@
 响应式原理
 ===================
 
-###原理
-当一个对象传入 Vue 实例作为 data 选项时，Vue 将遍历此对象所有的属性，并使用 Object.defineProperty 把这些属性全部转为 getter/setter。每个组件实例都对应一个 watcher 实例，用来监视属性。在组件渲染的过程如果属性 setter 触发，就会通知 watcher，从而使它关联的组件重新渲染。
+###基本原理
+Vue 监视data内对象的所有属性，属性值有变化时，就通知重新渲染。
 
 注意：
-1.Vue 无法检测到对象属性的添加或删除。
-2.Vue 会在初始化实例时对属性执行 getter/setter 转化。
-所以需要响应式的数据是需要一开始就在data（或state）内进行声明，对象属性添加和删除的数据不是响应式的。
-
-###对象属性
-对于已经创建的实例，如果想要实现添加的属性为响应式，需要使用
+Vue实例在初始化时开始监视对象属性。所以对象新添加的属性以及data加入的新对象都不是响应式的。
+如果想要实现对象新添加的属性为响应式，需要使用
 ```
 Vue.set(object, propertyName, value)
-```
-响应式删除：
-```
+
 Vue.delete(object, propertyName)
 ```
+###实现过程
+vue采用数据劫持和发布订阅模式的方式实现MVVM的。
 
-###vue3
-vue3使用Proxy来代理传入data的对象，实现响应式。
-Object.defineProperty只能遍历对象属性进行劫持，Proxy直接可以劫持整个对象，并返回一个新对象，只操作新的对象来达到响应式。
+**数据劫持**
+vue2通过Object.defineProperty()重置对象的setter, getter，vue3则是proxy代理对象来实现对数据的观察监视。
+
+**发布订阅模式**
+数据的观察者Observer发现数据变化后，就发送消息到消息订阅器Dep（Dep收集了所有的该数据订阅者，收集方式是通过解析器Compile对每个节点元素进行扫描和解析，找到订阅者），Dep再分发消息到订阅者，从而更新视图。
