--- a/JS/11.字符串对象.md
+++ b/JS/11.字符串对象.md
@@ -62,7 +62,7 @@ n是数字，表示字符串中第几个字符。注意，字符串中字符从0
  
     str.split()      //不分割
     str.split("");   //字符完全分割
-    str.split(" ");  //使用空格进行分割
+    str.split(" ");  //根据空格进行分割
 分割符可以是一个字符、多个字符或一个正则表达式。
 分割后将变成字符串**数组**。分割符并不作为返回数组元素的一部分。
 
