--- a/JS/12.日期对象.md
+++ b/JS/12.日期对象.md
@@ -4,22 +4,26 @@
 ###创建Date对象
 创建日期对象必须使用“new语句”。
 
-    var 日期对象名 = new Date();
+    var date = new Date();
 没有参数时，返回当前系统时间。
 设定参数可以按照年，月，日，时，分，秒，毫秒输入：
 
 	var date1=new Date(2019,07,04,20,50,15);  //注意，月份是从0-11，所以07表示八月。
 
+**时间戳**
+valueOf()返回时间戳：
+
+    new Date().valueOf()
 
 ###获取当前时间
 使用Date()方法可以返回系统当前日期时间，如果要获得具体的年月日等，则需要使用点符号。
 
-    日期对象名.getFullYear()	返回一个表示年份的4位数字
-    日期对象名.getMonth()	返回值是0（一月）到11（十二月）之间的一个整数
-    日期对象名.getDate()	    返回值是1~31之间的一个整数   
-    日期对象名.getHours()	返回值是0~23之间的一个整数，来表示小时数
-    日期对象名.getMinutes()	返回值是0~59之间的一个整数，来表示分钟数
-    日期对象名.getSeconds()	返回值是0~59之间的一个整数，来表示秒数
+    date.getFullYear()	返回一个表示年份的4位数字
+    date.getMonth()	返回值是0（一月）到11（十二月）之间的一个整数
+    date.getDate()	    返回值是1~31之间的一个整数   
+    date.getHours()	返回值是0~23之间的一个整数，来表示小时数
+    date.getMinutes()	返回值是0~59之间的一个整数，来表示分钟数
+    date.getSeconds()	返回值是0~59之间的一个整数，来表示秒数
 **需要注意，月份的返回值是从0开始，因此在输出该值时，需要将月份值+1**
 
 ----------
