--- a/JS/6.选择结构.md
+++ b/JS/6.选择结构.md
@@ -45,4 +45,6 @@ else{当条件1和条件2都为false时执行的代码;}
     default:
         语块n+1;
     }
-首先设置表达式（通常是一个变量）。随后表达式的值会与结构中的每个 case 的取值（可以是任何数据类型）做比较。如果存在匹配，则与该 case 关联的代码语块会被执行，不匹配就进行下一个。如都都不符合，则执行default下的内容，因此，default不是必须的。需要使用 break 来阻止代码自动地向下一个 case 运行。
+首先设置表达式。随后表达式的值会与结构中的每个 case 的取值（可以是任何数据类型）做比较。如果存在匹配，则与该 case 关联的代码语块会被执行，不匹配就进行下一个。如都都不符合，则执行default下的内容，因此，default不是必须的。需要使用 break 来阻止代码自动地向下一个 case 运行。
+
+注意：**值的比较是采用严格相等(===)的**。
