--- a/Vue/12.组件（二）.md
+++ b/Vue/12.组件（二）.md
@@ -19,7 +19,7 @@
 ###父组件传值-props
 子组件的props注册的内容会成为组件实例的**自定义属性**，通过绑定父组件的数据，就能把数据能传递到子组件使用。
 
-注意：props内的值是**属性**，所以不要有大写。
+注意：**props内的值是属性，只能是小写**。
 
 子组件构造器内添加props属性：
 ```
