--- a/JS/14.数组对象.md
+++ b/JS/14.数组对象.md
@@ -167,8 +167,7 @@
     values.reduce(function(acc, cur, index, array){ 
        return acc + cur; 
     },init);
-如果没有提供init初始值，则将使用数组中的第一个元素作为init。
-以上方法都不会修改原数组中的包含的值。
+如果没有提供init初始值，则将使用数组中的第一个元素作为init，然后从第二个元素开始往后计算。如果设置了初始值的话，则从第一个元素开始往后计算。
 
 ###数组的比较
 Javascript不能直接用 == 或者 === 来判断两个数组是否相等
