--- a/Ajax/1.Ajax基本用法.md
+++ b/Ajax/1.Ajax基本用法.md
@@ -82,7 +82,9 @@ readyState属性存有 XMLHttpRequest 的状态信息，每当 readyState 改变
 **进度事件**
 `progress`，`load`，`error`，`abort`
 
-progress 事件同时存在于下载和上传的传输。下载相关事件在 XMLHttpRequest 对象上被触发。上传相关事件在 XMLHttpRequest.upload 对象上被触发。
+progress 事件同时存在于下载和上传的传输。
+一个完整的ajax请求都会从loadstart事件开始，然后不间断地触发progress事件，然后触发load、abort、timeout或者error事件中的一个，最后触发loadend事件。
+注意：只要浏览器接收到了服务器的响应，不管其状态如何都会触发load事件。
 
 ###发起异步请求的步骤
 1.新建XMLHttpRequest对象
@@ -143,6 +145,7 @@ post请求的过程：
 
     ajax.setRequestHeader(header,value)	
 header: 规定头的名称，value: 规定头的值。
+提交form表单时，content-type值为application/x-www-form-unlencoded，另外还可以支持multipart/formdata、application/json等格式。
 使用 XHR 模仿表单提交：
 
     ajax.open("post", "postexample.php", true);
