--- a/ES6/3.解构赋值.md
+++ b/ES6/3.解构赋值.md
@@ -17,7 +17,7 @@
 
     let [x, y = 'b'] = ['a']; // x='a', y='b'
     let [x, y = 'b'] = ['a','c']; // x='a', y='c'
-当一个数组成员严格等于undefined，默认值才会生效。
+当一个数组成员严格等于(===)undefined，默认值才会生效。
 
     let [x, y = 'b'] = ['a', undefined]; // x='a', y='b'
 如果变量比值少。这种情况下，解构依然可以成功。
