--- a/ES6/4.字符串.md
+++ b/ES6/4.字符串.md
@@ -13,9 +13,10 @@ ES6 为字符串添加了遍历器接口，字符串可以像数组一样使用`
     // "o"
 
 **三点运算符**
-三点运算符可以将字符串转为数组。
+三点运算符可以拆解字符串。
 
     [...'hello']  // [ "h", "e", "l", "l", "o" ]
+    console.log(...'sad') //a s d
 
 
 **模版字符串**
