--- a/JS/8.函数理解.md
+++ b/JS/8.函数理解.md
@@ -80,7 +80,8 @@ logNum.apply(obj,[1,2]); //123,1,2
 logNum.bind(obj)(1,2) //123,1,2
 logNum.bind(obj,1,2)() //123,1,2
 ```
-bind返回的是一个新的函数，你必须调用它才会被执行。bind()函数与call()函数接收参数的方式是一样的。
+bind返回的是一个新的函数，调用它才会被执行。所以一般用于像setTimeout、事件绑定时，在函数名后调用。
+bind()函数与call()函数接收参数的方式是一样的。
 call和bind的其他参数用逗号隔开，apply的其他参数需要放在数组内。
 
 **传递参数**
