--- a/JS/18.JS事件.md
+++ b/JS/18.JS事件.md
@@ -42,9 +42,9 @@ JS事件
 参数useCapture是布尔值。如果是true，表示在事件捕获阶段调用事件处理程序；如果是false，表示在事件冒泡阶段调用事件处理程序。
 
     document.getElementById("button").addEventListener("click",function(event){
-            alert("button");
-            event.stopPropagation();    //阻止事件冒泡
-        },false);
+        alert("button");
+        event.stopPropagation();    //阻止事件冒泡
+    },false);
 
 'on事件'绑定的事件，后绑定的会覆盖先绑定的事件处理，而addEventListener绑定的事件不会覆盖。
 **'on事件'绑定的事件通过 `dom.on事件 = null`来移除**，**addEventListener()添加的事件处理程序只能使用removeEventListener()来移除**。移除时传入的参数与添加处理程序时使用的参数相同，这也意味着通过addEventListener()添加的匿名函数将无法移除（两个一样的匿名函数不是相同的函数），因此需要函数写为非匿名函数，并写在事件外:
@@ -194,9 +194,9 @@ keyup(键起来)
 focus和blur
 focus表示获取光标触发的事件，blur表示失去光标触发的事件。
 change
-当表单的值改变时且失去焦点触发的事件（包括下拉列表，文件上传）。
-input  
-当表单的值发生变化时就会触发
+当表单的值改变且失去焦点时的事件（包括下拉列表，文件上传）。
+input
+当表单的值开始发生变化时就会触发
 select
 选中文本时触发的事件。
 
