--- a/Vue/10.表单绑定.md
+++ b/Vue/10.表单绑定.md
@@ -2,6 +2,12 @@
 ===================
 可以用 v-model 指令在表单 input、textarea 及 select 元素上创建**双向数据绑定**（m→v，v→m）。它负责监听用户的输入事件以更新数据，根据控件类型自动选取正确的方法来更新元素。
 
+v-model 本质上是语法糖，在内部为不同的输入元素使用不同的 property 并抛出不同的事件：
+
+1.text 和 textarea 元素使用 value property 和 input 事件；
+2.checkbox 和 radio 使用 checked property 和 change 事件；
+3.select 字段将 value 作为 prop 并将 change 作为事件。
+
 ###文本框
  input 和 textarea 元素中使用 v-model 实现双向数据绑定：
 
