--- a/Vue/11.组件（一）.md
+++ b/Vue/11.组件（一）.md
@@ -93,6 +93,10 @@ Vue.component('my-component', {
   // ...
 })
 ```
+外部的attribute会覆盖掉内部同名的attribute。除了class 和 style，这两种会合并内外的值。
+
+###组件的v-model
+v-model这个语法糖在input、radio等有不同的实现，在组件上就默认使用value和input。则对于模版有radio这种的，就不太合适，需要model 选项来更改默认内容。
 
 ###插槽slot
 组件元素之间内容本来是没有作用的：
@@ -130,7 +134,7 @@ Vue.component('my-component', {
 		})
 	</script>
 
-组件标签之间的位置我称之为插槽位，插槽位和组件模板具有相同的作用域，可以访问到组件自身的data和computed，但是拿不到props传递的数据。
+组件标签之间的位置我称之为插槽位，插槽位和模板具有相同的作用域，可以访问到组件自身的data和computed，但是拿不到props传递的数据。
 
 **默认值**
 slot标签之间的内容将作为默认值，如果插槽位没有数据，就渲染默认值：
