--- a/Vue/15.混入、插件和过滤器..md
+++ b/Vue/15.混入、插件和过滤器..md
@@ -23,7 +23,8 @@ Vue.component("my-component2",{
 })
 ```
 此时组件my-component1和my-component2的methods方法内都有hello函数。
-当组件和混入对象含有同名选项时，以组件数据优先。
+当组件和混入对象选项内的函数名或数据变量重名时，组件会覆盖混入对象的选项。
+同名的钩子函数，则先调用混入对象的钩子，再调用组件的钩子。
 
 ###插件
 插件通常用来为 Vue 添加全局功能。
