--- a/Vue/2.Vue起步.md
+++ b/Vue/2.Vue起步.md
@@ -22,7 +22,7 @@ Vue构造函数接受一个**配置对象**作为参数，其中：
 	    <p>{{data2}}</p>
 	</div>
 这个被vue实例绑定的DOM区域就是mvvm中的v（view），这个通过 new 创建的vue实例称为根实例。
-
+一旦实例挂载到一个 DOM 元素上，就不需要关注 DOM 了，只需要处理Vue实例即可，因为Vue实例控制着这个DOM的一切。
 
 **vue3**
 vue3使用新的全局api`createApp`
