--- a/Vue/16.渲染函数.md
+++ b/Vue/16.渲染函数.md
@@ -1,6 +1,6 @@
 渲染函数
 ===================
-vue除了使用模板建立虚拟dom后，再渲染为html，也可以通过渲染函数来建立dom。
+vue通过模板，计算成虚拟dom后，再渲染为html。也可以通过渲染函数来建立dom。
 
 ###render
 render 函数是vue配置对象中的一个函数，它接收一个函数对象作为参数，这个函数对象执行具体的渲染内容：
