--- a/Ajax/5.同源和跨域.md
+++ b/Ajax/5.同源和跨域.md
@@ -28,14 +28,17 @@ Hosts是一个没有扩展名的系统文件，其基本作用就是将一些常
 3.屏蔽网站。可以利用Hosts把网站的域名映射到一个错误的IP或本地计算机的IP，这样就不用访问了。
 
 ###同源
-两个页面地址中的协议、域名和端口号一致，则表示同源。注意：localhost和127.0.0.1虽然都指向本机，但也属于跨域。
+两个页面地址中的协议、域名和端口号一致，则表示同源。
 同源策略是浏览器对javascript施加的安全限制。同源策略主要是限制了页面最后那个的脚本从另一个源加载资源时的行为，这对于防范恶意页面是一种很好的防御机制。包括：
 1.存储在浏览器中的数据，如localStroage、Cooke和IndexedDB不能通过脚本跨域访问
 2.不能通过脚本操作不同域下的DOM
 3.不能通过ajax请求不同域的数据
 
+**本地跨域**
+本地页面在请求本地文件时会跨域，因为本地是file协议，服务器则是http(https)协议。
+
 ###跨域
-除了架设服务器代理（浏览器请求同源服务器，再由后者请求外部服务），有三种方法规避这个限制。
+同源政策规定，AJAX 请求只能发给同源的网址，有三种方法规避这个限制。
 
 1. JSONP
 2. WebSocket
