--- a/CSS/24.函数.md
+++ b/CSS/24.函数.md
@@ -1,7 +1,7 @@
 函数
 ===================
-**attr(attribute-name)**
-返回元素属性的值
+**attr(attribute)**
+返回该元素的attribute属性值
 ```
 input{
     value: attr(type)
@@ -13,4 +13,5 @@ input{
 ```
 width: calc(100% - 100px);
 ```
+注意：**运算符号两侧必须有空格**。
 
