--- a/ES6/10.Symbol 类型.md
+++ b/ES6/10.Symbol 类型.md
@@ -25,7 +25,7 @@ Symbol 值可以显式转为字符串和布尔值。
     }
 
 **对象的属性**
-注意，Symbol 值作为对象属性名时，不能用点运算符，要使用[]。9
+注意，Symbol 值作为对象属性名时，不能用点运算符，要使用[]
 
     let mySymbol = Symbol();
     
