--- a/HTML/6.插入图片.md
+++ b/HTML/6.插入图片.md
@@ -4,7 +4,7 @@ img插入图片
 
 
 ##src
-src属性是最重要的属性，制定图片来源路径。图片来源包括本地图片和网络图片，区别就在于一种存放在本地，一种存放在网络上。不管是哪一种，都要完整写出图片的名字/来源+后缀。路径分为相对路径和绝对路径。
+src属性是最重要的属性，指定图片来源路径。图片来源包括本地图片和网络图片，区别就在于一种存放在本地，一种存放在网络上。不管是哪一种，都要完整写出图片的名字/来源+后缀。路径分为相对路径和绝对路径。
 
 ##alt
 alt属性在图片出现错误无法显示之后，给图片增加一个说明，主要是为了防止图片挂掉了以后，别人无法知道图片是关于什么的。
@@ -73,3 +73,20 @@ height规定图片的高度，width规定了图片的宽度。单位分为像素
 （3）当shape属性为`poly`时，代表多边形，则cooreds属性值为(x1,y1,x2,y2,x3,y3......xn,yn),规定了多边形各个顶点的坐标，由于浏览器会自动闭合多边形，所以尾部坐标不必与第一个坐标相等。
 **target属性**
 定义了在何处打开目标链接，属性值`_self`（默认）在当前窗口打开被链接的文档，`_blank`在新窗口打开被链接的文档
+
+###Data URL
+Data URL由四个部分组成：前缀 (data:)、数据类型MIME(默认text/plain)、（可选）base64标记、数据本身：
+```
+data:[<mediatype>][;base64],<data>
+```
+如果数据是文本类型，可以直接将文本嵌入，如果是二进制数据，就需要将数据进行 base64 编码之后再进行嵌入。
+例如一张图片的DataURL：
+```
+data:image/png;base64,图片base64数据
+```
+一行文本（Hello World!）的DataURL：
+```
+data:,Hello%2C%20World!
+data:text/plain;base64,SGVsbG8sIFdvcmxkIQ==
+```
+这样做的目的是，将一些小的数据，直接嵌入到网页中，从而不用再从外部文件载入，减少请求资源的链接数。
