--- a/JS/11.字符串对象.md
+++ b/JS/11.字符串对象.md
@@ -57,7 +57,7 @@ n是数字，表示字符串中第几个字符。注意，字符串中字符从0
 **分割与连接**
 
 `split()`方法
-
+ 
     字符串.split(分割符)
  
     str.split()      //不分割
@@ -74,11 +74,11 @@ n是数字，表示字符串中第几个字符。注意，字符串中字符从0
 **转化**
 
     parseInt(String) 
-将字符串转成相应的整数。浮点数以后的数字都不要了。
+将数字字符串转成相应的整数。
 
     parseFloat(String)  
-将字符串转成相应的浮点数,而且必须为浮点数表示（十进制）
-
+将数字字符串转成相应的浮点数。
+注意：这两个方法只适用于以数字开头的字符串，非数字开头都转化为NaN。
 
     字符串名.toLowerCase()    
 将大写字符串转换为小写字符串
@@ -93,31 +93,9 @@ n是数字，表示字符串中第几个字符。注意，字符串中字符从0
 		document.write(a.toUpperCase())
 	</script>
 
-
-
-
-
 **抽取**
 
     string.substring(n1, n2)
 substring() 方法用于提取字符串中介于两个指定下标之间的字符。
 substring() 方法返回的子串包括 开始 处的字符，但不包括 结束 处的字符。
-
-
-**字体效果**
-
-    <script>
-    var txt = "Hello World!";
-    document.write("<p>字体变大: " + txt.big() + "</p>");
-    document.write("<p>字体缩小: " + txt.small() + "</p>");
-    document.write("<p>字体加粗: " + txt.bold() + "</p>");
-    document.write("<p>斜体: " + txt.italics() + "</p>");
-    document.write("<p>固定定位: " + txt.fixed() + "</p>");
-    document.write("<p>加删除线: " + txt.strike() + "</p>");
-    document.write("<p>字体颜色: " + txt.fontcolor("green") + "</p>");
-    document.write("<p>字体大小: " + txt.fontsize(6) + "</p>");
-    document.write("<p>下标: " + txt.sub() + "</p>");
-    document.write("<p>上标: " + txt.sup() + "</p>");
-    document.write("<p>链接: " + txt.link("http://www.oncedoc.com") + "</p>");
-    </script>
 
