--- a/JS/9.调用函数.md
+++ b/JS/9.调用函数.md
@@ -46,8 +46,9 @@
 一个函数有直接或间接调用自身的行为，就称为递归。
 
 	function foo(i) {
-		if (i < 0);
-		return false;
+		if (i < 0){
+			return false
+		}
 		console.log(i);
 		foo(i - 1);
 	}
