--- a/ES6/12.for..of遍历.md
+++ b/ES6/12.for..of遍历.md
@@ -11,8 +11,8 @@ Iterator 的遍历过程是这样的：
 （2）调用指针对象的next方法，可以将指针指向数据结构的第一个成员。
 （3）不断调用指针对象的next方法，直到它指向数据结构的结束位置。
 
-**默认 Iterator 接口**
-默认的 Iterator 接口部署在数据结构的Symbol.iterator属性，原生具备 Iterator 接口的数据结构如下：
+**Iterator 接口**
+原生具备 Iterator 接口的数据结构如下：
 1.Array
 2.Map
 3.Set
@@ -21,11 +21,19 @@ Iterator 的遍历过程是这样的：
 6.arguments 对象
 7.NodeList 对象
 
+默认的 Iterator 接口部署在数据结构的Symbol.iterator属性，Symbol.iterator属性是函数，执行后返回当前对象的遍历器对象。:
+```
+let arr = [1,2,3];
+let iter = arr[Symbol.iterator]()  //Array Iterator {}
+iter.next() // { value: 1, done: false }
+iter.next() // { value: 2, done: false }
+```
+
 ###for...of循环
 一个数据结构只要部署了Symbol.iterator属性，就被视为具有 iterator 接口，就可以用for...of循环遍历它的成员。
 
-    const arr = ['red', 'green', 'blue'];
+    const arr = [1, 2, 3];
 
     for(let v of arr) {
-        console.log(v); // red green blue
+        console.log(v); // 1 2 3
     }
