--- a/JS/14.数组对象.md
+++ b/JS/14.数组对象.md
@@ -134,7 +134,7 @@
 `forEach()`方法:
 
     array.forEach(function (item, index, array))
-遍历数组内容,没有返回值，需要在回调函数内返回需要的值。
+遍历数组内容，对数组内的值执行函数回调函数。**forEach的返回值为undefined**，需要的值要在回调函数内自己返回。
 
 `every()`方法：
 对数组中的每一项运行给定函数，如果该函数对每一项都返回 true，则返回 true。
@@ -147,7 +147,7 @@
 对数组中的每一项运行给定函数，如果该函数对任一项返回 true，则返回 true。
 
  `filter()`方法：
-对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
+对数组中的每一项运行给定函数，返回执行该函数会返回 true 的项组成的新数组。
 
     numbers.filter(function(item, index, array){ 
         return (item > 2); 
@@ -159,13 +159,13 @@
     numbers.map(function(item, index, array){ 
         return item+2; 
     });  //[3,4,5,6]
-适合创建包含的项与另一个数组一一对应的数组。
+map无法使用return，break中断循环。
 
 `reduce()`方法和 `reduceRight()`方法
-向后和向前迭代数组的所有项，然后构建一个最终返回的值。函数接收 4 个参数：累计值、当前值、项的索引和数组对象。
+向后和向前迭代数组的所有项，然后构建一个最终返回的值。函数接收 4 个参数：累计值、当前值、当前值的索引和数组对象。
 
-    values.reduce(function(acc, cur, index, array){ 
-       return acc + cur; 
+    values.reduce(function(acc, item, index, array){ 
+       return acc + item; 
     },init);
 如果没有提供init初始值，则将使用数组中的第一个元素作为init，然后从第二个元素开始往后计算。如果设置了初始值的话，则从第一个元素开始往后计算。
 
