--- a/ES6/13.promise.md
+++ b/ES6/13.promise.md
@@ -7,7 +7,7 @@ const promise = new Promise(function(resolve, reject) {
   // code
 });
 ```
-Promise构造函数接受一个函数作为参数，这个参函数也有两个参数resolve和reject，它们也是函数。resolve函数将Promise对象的状态从“未完成”变为“成功”，所以在异步操作成功时调用；reject函数将Promise对象的状态从“未完成”变为“失败”，所以在异步操作失败时调用，这两个函数都可以传递参数。
+Promise构造函数接受一个函数作为参数，这个参函数也有两个参数resolve和reject，它们也是函数。resolve函数将Promise对象的状态从“未完成pending”变为“成功fulfilled”，所以在异步操作成功时调用；reject函数将Promise对象的状态从“未完成pending”变为“失败rejected”，所以在异步操作失败时调用，这两个函数都可以传递参数。
 注意：**Promise 创建后就会立即执行**。所以，用Promise的时候一般是包在一个函数中，在需要的时候去运行这个函数，如：
 ```
 function runPromise(){
