--- a/JS/14.数组对象.md
+++ b/JS/14.数组对象.md
@@ -1,7 +1,6 @@
 数组对象
 ===================
-**数组的每一项可以保存任何类型的数据**，数组的索引从0开始。数组的大小是可以动态调整的，即可以随着数据的添加自动增长以容
-纳新增数据
+**数组的每一项可以保存任何类型的数据**，数组的索引从0开始。数组的大小是可以动态调整的，即可以随着数据的添加自动增长以容纳新增数据。
 
 ###创建数组对象Array
 **方法1**：
