--- a/JS/16.元素接口.md
+++ b/JS/16.元素接口.md
@@ -14,7 +14,7 @@ document节点对象代表整个文档。
 
 
 **DOMContentLoaded事件和load事件**
-DOMContentLoaded是document对象的事件，在DOM解析完成时触发，不需要等待图片等其他资源加载完成。load是window对象的事件，页面上所有的资源（图片，音频，视频等）被加载以后才会触发load事件。简单来说，页面的load事件会在DOMContentLoaded被触发之后才触发。
+DOMContentLoaded是document对象的事件，在DOM解析完成时触发，不需要等待图片等其他资源加载完成。load是window对象的事件，页面上所有的资源（图片，脚本，css等）被加载以后才会触发load事件。简单来说，页面的load事件会在DOMContentLoaded被触发之后才触发。
 
 ###Anchor
 `a`元素有一系列 URL 相关属性，可以用来操作链接地址。
