--- a/ES6/13.promise.md
+++ b/ES6/13.promise.md
@@ -8,15 +8,7 @@ const promise = new Promise(function(resolve, reject) {
 });
 ```
 Promise构造函数接受一个函数作为参数，这个参函数也有两个参数resolve和reject，它们也是函数。resolve函数将Promise对象的状态从“未完成pending”变为“成功fulfilled”，所以在异步操作成功时调用；reject函数将Promise对象的状态从“未完成pending”变为“失败rejected”，所以在异步操作失败时调用，这两个函数都可以传递参数。
-注意：**Promise 创建后就会立即执行**。所以，用Promise的时候一般是包在一个函数中，在需要的时候去运行这个函数，如：
-```
-function runPromise(){
-    const promise = new Promise(function(resolve, reject) {
-      // code
-    });
-    return promise;
-}
-```
+
 then方法是Promise对象“成功”和“失败”的回调函数。有两个函数作为参数，这两个参函数分别接受resolved（成功）状态和rejected（失败）状态传递的值为参数：
 ```
 promise.then(function(value) {
@@ -26,6 +18,16 @@ promise.then(function(value) {
 });
 ```
 第二个函数是可选的，不一定要提供。
+
+注意：**Promise 创建后就会立即执行，自身是同步的，then是异步的**。所以，用Promise的时候一般是包在一个函数中，在需要的时候去运行这个函数，如：
+```
+function runPromise(){
+    const promise = new Promise(function(resolve, reject) {
+      // code
+    });
+    return promise;
+}
+```
 
 下面是异步加载图片的例子。
 ```
