--- a/ES6/5.函数.md
+++ b/ES6/5.函数.md
@@ -91,3 +91,8 @@ foo()
 注意：
 **箭头函数没有自身的this对象**，箭头函数内部的this就是外层代码块的this，指向创建箭头函数的上下文对象，而不是函数自身。这个指向是固定不变的。
 **箭头函数没有arguments对象**，如果要用，用 rest 参数代替。
+```
+(...rest)=>{
+  console.log(rest)
+}
+```
