--- a/JS/13.Math对象.md
+++ b/JS/13.Math对象.md
@@ -21,6 +21,7 @@ Math.min(数1,数2,…,数n)
 |**floor(x)**       | 向下取整    |
 |**random()**      | 生成0-1间随机数字  |
 
+由于toFixed()存在浮点数精度的问题，所以应该用 Math.round( num * 100 )/100 取代 num.toFixed(2)来保留小数位。
 
 	<script type="text/javascript">
 		var a1=Math.random()*10
