--- a/ES6/19.Clipboard API.md
+++ b/ES6/19.Clipboard API.md
@@ -1,6 +1,6 @@
 Clipboard API
 ===
-剪贴板 Clipboard API 为 Navigator 接口添加了只读属性 clipboard，该属性返回一个可以读写剪切板内容的 Clipboard 对象。其所有操作都是异步的，返回 Promise 对象。
+剪贴板 Clipboard API 为 Navigator 接口添加了只读属性 clipboard，该属性返回一个可以读写剪切板内容的 Clipboard 对象。Clipboard 对象所有操作都是异步的，返回 Promise 对象。
 ```
 let clipboard = navigator.clipboard;
 ```
