--- a/JS/18.JS事件.md
+++ b/JS/18.JS事件.md
@@ -3,7 +3,7 @@ JS事件
 ###事件流
 事件流包括三个阶段：事件捕获阶段、处于目标阶段和事件冒泡阶段。首先发生的是事件捕获，为截获事件提供了机会。然后是实际的目标接收到事件。最后一个阶段是冒泡阶段，可以在这个阶段对事件做出响应。
 ![](./相关文件/18.1.JPG)
-实际的目标（<div>元素）在捕获阶段不会接收到事件。这意味着在捕获阶段，事件从 document 到<html>再到<body>后就停止了。下一个阶段是“处于目标”阶段，于是事件在<div>上发生，并在事件处理中被看成冒泡阶段的一部分。然后，冒泡阶段发生，事件又传播回文档。
+实际的目标（`<div>`元素）在捕获阶段不会接收到事件。这意味着在捕获阶段，事件从 document 到`<html>`再到`<body>`后就停止了。下一个阶段是“处于目标”阶段，于是事件在`<div>`上发生，并在事件处理中被看成冒泡阶段的一部分。然后，冒泡阶段发生，事件又传播回文档。
 
 
 
@@ -16,7 +16,7 @@ JS事件
     var 变量名 = document.getElementById("元素id");
     变量名.on事件= function()
     {
-    执行内容
+        执行内容
     }
 
 
@@ -39,7 +39,7 @@ JS事件
 3.dom事件监听——addEventListener()
 
     element.addEventListener("event", function, useCapture);
-参数useCapture是布尔值。如果是true，表示在事件捕获阶段调用事件处理程序；如果是false，表示在事件冒泡阶段调用事件处理程序。
+参数useCapture是布尔值，默认为false。如果是true，表示在事件捕获阶段调用事件处理程序；如果是false，表示在事件冒泡阶段调用事件处理程序。
 
     document.getElementById("button").addEventListener("click",function(event){
         alert("button");
@@ -92,8 +92,16 @@ function fun2(param){
 取消事件的默认行为。
 
 2.stopPropagation()
-取消事件冒泡。
+取消捕获和冒泡阶段中事件传播。
+```
+dom.addEventListener("click", (e)=>{
+    e.stopPropagation(); //阻止冒泡
+},false);
 
+dom.addEventListener("click", (e)=>{
+    e.stopPropagation(); //阻止捕获
+},true);
+```
 **全局属性**
 1.target
 触发事件的目标元素
@@ -224,44 +232,36 @@ paste
 load:加载事件,在文档加载完毕再执行的事件。
 scroll:滚动事件
 
-----------
 
+###节流
+节流是一段时间内，只执行一次事件，事件触发有CD，不会频繁触发。
+```
+let timer = undefined;  //节流定时器
+btn.addEventListener('click',()=>{
+	if ( !timer ){
+		timer = setTimeout(()=>{
+			clearTimeout( timer )
+			timer = undefined
+		},2000)
+		btn.innerText++;
+	}
+})
+```
 
-一个错误代码：
-
-    <!DOCTYPE html>
-    <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title></title>
-        <script type="text/javascript">
-            document.getElementById("btn").onclick = function () {alert("JavaScript"); }
-        </script>
-    </head>
-    <body>
-    <input id="btn" type="button" value="提交" />
-    </body>
-    </html>
-其中JS代码是无法执行的。因为浏览器对一个页面是从上到下进行解析的，当浏览器解析到js代码是，没有后面的id数据，就无法进行执行。因此，需要将js代码改为
-
-        <script type="text/javascript">
-        	window.onload=function(){
-            document.getElementById("btn").onclick = function () {alert("JavaScript"); };}
-        </script>
-
-这样，js代码就会在页面执行完成后再执行。或者使用下面的代码：
-
-    <!DOCTYPE html> 
-    <html lang="en">
-    <head>
-    <title></title>
-        <script type="text/javascript">
-            function alertjs(){
-            	alert("JavaScript");
-            }
-        </script>
-    </head>
-    <body>
-    <input id="btn" type="button" value="提交" onclick="alertjs()">
-    </body>
-    </html>
-和上面错误的代码差别在于这段代码前面只是函数，函数本身不会自己执行，在调用时才会执行。
+###防抖
+防抖是在事件触发时，有延迟时间再执行，在等待过程中，如果事件又触发了，则重置等待时间。
+```
+let timer = undefined;  //节流定时器
+btn.addEventListener('click',(e)=>{
+	if ( timer ){
+		clearTimeout(timer);
+	}
+	timer = setTimeout(()=>{
+		btn.innerText++;
+		clearTimeout(timer);
+		timer = undefined
+	},200)
+})
+```
+节流是触发事件后有CD，CD期内不能再次触发；防抖是触发事件后有读条时间，读条时间内触发事件，会重新读条。
+节流保证规定时间内，事件一定触发一次。
