--- a/JS/14.数组对象.md
+++ b/JS/14.数组对象.md
@@ -119,7 +119,11 @@
 `sort()` 方法
 
     array.sort(sortfunction)
-将数组的元素进行排序。默认排序顺序为按字母升序。
+将数组的元素进行排序。默认排序顺序为按首字母升序。
+```
+[1, 3, 4, 100].sort() //[1,100,3,4]
+```
+sortfunction定义排序顺序函数。返回值应该是一个数字，其正负性表示两个元素的相对顺序。
 
     arr.sort(function(a,b){return a-b});  //数字升序
     arr.sort(function(a,b){return b-a});  //数字降序
