--- a/JS/4.运算符.md
+++ b/JS/4.运算符.md
@@ -61,7 +61,8 @@ true + false // 1
 | != | 不相等 |
 |  !== | 不相同（值和类型） |
 
-`==`在判断相等时会进行隐式的类型转换，`===`先判断类型再比较，类型不同直接不相等。
+`==`会进行隐式的类型转换，再判断数值是否相等。
+`===`先判断类型再比较值，类型不同直接不相等。
 两个引用类型（对象、数组、函数）数据比较时，不是比较它们的值是否相等，而是比较它们是否指向同一个内存地址。
 
 ###赋值运算符
