--- a/JS/6.选择结构.md
+++ b/JS/6.选择结构.md
@@ -3,7 +3,7 @@
 对于判断条件较少的可以使用if语句，但是在实现一些多条件判断中，就应该使用switch语句。
 
 ###if语句
-if语句()中的表达式会自动转化为布尔值。
+if语句()中的条件表达式会自动转化为布尔值（对象都转化为true）。
 
  - if(条件) { 执行内容;}
 
