--- a/JS/8.函数理解.md
+++ b/JS/8.函数理解.md
@@ -80,9 +80,10 @@ logNum.apply(obj,[1,2]); //123,1,2
 logNum.bind(obj)(1,2) //123,1,2
 logNum.bind(obj,1,2)() //123,1,2
 ```
-bind返回的是一个新的函数，调用它才会被执行。所以一般用于像setTimeout、事件绑定时，在函数名后调用。
-bind()函数与call()函数接收参数的方式是一样的。
-call和bind的其他参数用逗号隔开，apply的其他参数需要放在数组内。
+bind返回的是一个新的函数，调用它才会被执行。所以一般在定时器、事件绑定，这种函数定义时使用；call和apply一般用在函数执行时。
+call和bind的传参方式相同，参数都用逗号隔开，而apply的其他参数需要以数组或类数组传入。
+如果传入的第一个参数为null，函数体内的this会指向默认的宿主对象，在浏览器中则是window。
+
 
 **传递参数**
 向函数传递参数时，是将函数外部的值复制给函数内部的参数，像是把值从一个变量复制给函数的参数变量。
