--- a/JS/19.面向对象.md
+++ b/JS/19.面向对象.md
@@ -216,3 +216,18 @@ instanceof运算符用来判断实例和类之间的原型链关系。
     var o = new C();
     o instanceof C;  // true
     o instanceof Object; // true
+
+
+###原型继承
+JS对象追根溯源都来源于根对象——Object.prototype原型对象：
+![](./相关文件/19.2.png)
+JS对象，实际上都是从Object.prototype对象克隆而来的，克隆由引擎内部负责实现。
+原型对象通过构造器（函数）克隆出对象，这个对象通过__proto__属性来记住它的构造器的原型。如果这个对象有无法响应的请求，就会将请求委托给构造器的原型。
+虽然JS的对象最初都是由Object.prototype对象克隆而来的，但对象构造器的原型可以动态指向其他对象。这样一来，当对象a需要借用对象b的能力时，就可以把对象a的构造器A的原型指向对象b，从而达到a继承b的效果。
+```
+let b = { name: '小明' }; 
+function A(){}; 
+A.prototype = b; 
+let a = new A(); 
+console.log( a.name );    // 小明
+```
