--- a/ES6/13.promise.md
+++ b/ES6/13.promise.md
@@ -92,11 +92,11 @@ Promise 对象的错误具有“冒泡”性质，会一直向后传递，直到
 Promise 内部的错误会终止后续所有then的运行，并传递到catch内，但是不会影响到 Promise 外部的代码。
 
 ###all方法
-all()方法将多个 Promise 实例合成一个新的 Promise 实例。
+all()方法将多个 Promise 实例的数组合成一个新的 Promise 实例。
 ```
 let p = Promise.all([p1, p2, p3]);
 ```
-all()方法接收一个具有 Iterator 接口的对象为参数，上例p的状态由p1、p2、p3决定，p1、p2、p3都成功，则p变为成功，p1、p2、p3有一个失败，则p失败。
+上例p的状态由p1、p2、p3决定，p1、p2、p3都成功，则p变为成功，then传递所有成功传递的值，p1、p2、p3有一个失败，则p失败，catch捕获第一个失败传递的值。
 
 ###race方法
 race()方法也是将多个 Promise 实例合成一个新的 Promise 实例。
