--- a/ES6/14.异步函数.md
+++ b/ES6/14.异步函数.md
@@ -38,16 +38,17 @@ function sleep(delay) {
 
 (async () => {
 	let data1 = await sleep(1000);
-	console.log(data1) // 1000
+	console.log(data1); // 1000
 	let data2 = await sleep(2000);
-	console.log(data2) // 2000
+	console.log(data2); // 2000
 	let data3 = await Promise.all([sleep(1000),sleep(2000)]);
-	console.log(data3) // [1000, 2000]
+	console.log(data3); // [1000, 2000]
+	return data3
 })();
 ```
-await命令就是then命令的语法糖，直到它的 Promise 状态变化，才会接着往下一行代码执行。
+await命令就是then命令的语法糖，在 Promise 状态变化后，才会接着往下一行代码执行。
 
-async 函数返回一个 Promise 对象。状态类似promise.all()，即所有的await都完成，Promise状态为成功；一个await抛出error，则Promise状态为失败。
+async 函数返回一个 Promise 对象。状态类似promise.all()，即所有的await都完成，Promise状态为成功；一个await抛出error，则Promise状态为失败。async 函数函数内的返回值data3会作为then的回调函数参数传递。
 
 **错误处理**
 将其放在try...catch代码块之中。
