--- a/JS/10.对象.md
+++ b/JS/10.对象.md
@@ -89,8 +89,8 @@ set是一个函数，表示该属性的存值函数（setter），默认为undef
 **Object.getOwnPropertyDescriptor()**
 Object.getOwnPropertyDescriptor方法可以获取属性描述对象。它的第一个参数对应对象，第二个参数是一个字符串，对应对象的某个属性名。
 ```
-var obj = { p: 'a' };
-Object.getOwnPropertyDescriptor(obj, 'p')
+var obj = { a: 'a' };
+Object.getOwnPropertyDescriptor(obj, 'a')
 // Object { value: "a",
 //   writable: true,
 //   enumerable: true,
@@ -100,6 +100,28 @@ Object.getOwnPropertyDescriptor(obj, 'p')
 注意，Object.getOwnPropertyDescriptor方法只能获取对象自身的属性，不能用于继承的属性。
 
 **Object.defineProperty()**
-Object.defineProperty方法可以通过设置属性描述对象来新定义属性。
+Object.defineProperty方法可以通过设置属性描述对象来修改或定义属性，取决于属性名是否已存在。
 
     Object.defineProperty( 对象, 属性名, {属性描述对象});
+defineProperty()修改属性时，传入的属性描述对象可以改变被修改属性的属性描述对象。
+```
+var obj = {foo: 1};
+Object.defineProperty(obj, 'foo', {
+    value: 2
+});
+obj.foo // 2
+```
+定义属性时，属性描述对象的writable、configurable、enumerable这三个属性的默认值都为false。
+```
+var obj = {};
+Object.defineProperty(obj, 'foo', {});
+Object.getOwnPropertyDescriptor(obj, 'foo')
+// {
+//   value: undefined,
+//   writable: false,
+//   enumerable: false,
+//   configurable: false
+// }
+```
+属性描述对象存值函数称为setter，使用属性描述对象的set属性；取值函数称为getter，使用属性描述对象的get属性。
+注意：如果设置value属性或将writable属性设为true，就不能定义取值函数或存值函数。
